fixed header z-index and colors

--- a/src/styles/cutsom.css
+++ b/src/styles/cutsom.css
@@ -1,13 +1,13 @@
 /* Navbar */
 html:not([data-scroll='0']) .header,
-.colored-navbar {
+.header.colored-navbar {
   background-color: white;
   box-shadow: 0 0 0.2em rgba(0, 0, 0, 0.5);
   transition: 0.3s linear;
   color: #333333;
 }
 
-.content .header .colored-navbar {
+.content .header.colored-navbar {
   transition: none;
 }
 
@@ -20,7 +20,7 @@ html[data-scroll='0'] .header .logo_img {
 }
 
 html:not([data-scroll='0']) .header .logo_img,
-.content .header .colored-navbar .logo_img {
+.content .header.colored-navbar .logo_img {
   /* width: 28px;
   height: 28px; */
   background-image: url('/hamsa-logo.svg');
@@ -29,17 +29,17 @@ html:not([data-scroll='0']) .header .logo_img,
 }
 
 html:not([data-scroll='0']) .header .logo_hamsa,
-.header .colored-navbar .logo_hamsa {
+.header.colored-navbar .logo_hamsa {
   color: #17457c;
 }
 
 html:not([data-scroll='0']) .header .logo_tech,
-.header .colored-navbar .logo_tech {
+.header.colored-navbar .logo_tech {
   color: #d7150e;
 }
 
 html:not([data-scroll='0']) .header .nav_link,
-.header .colored-navbar .nav_link {
+.header.colored-navbar .nav_link {
   color: #333333;
 }
 
@@ -48,8 +48,7 @@ html:not([data-scroll='0'])
   .search-input-navbar
   .ant-input-group
   > .ant-input:first-child,
-.header
-  .colored-navbar
+.header.colored-navbar
   .search-input-navbar
   .ant-input-group
   > .ant-input:first-child {
@@ -62,8 +61,7 @@ html:not([data-scroll='0'])
   .search-input-navbar
   .ant-input-group
   > .ant-input:first-child:focus,
-.header
-  .colored-navbar
+.header.colored-navbar
   .search-input-navbar
   .ant-input-group
   > .ant-input:first-child:focus {
@@ -75,8 +73,7 @@ html:not([data-scroll='0'])
   .search-input-navbar
   .ant-input-group
   > .ant-input:first-child::placeholder,
-.header
-  .colored-navbar
+.header.colored-navbar
   .search-input-navbar
   .ant-input-group
   > .ant-input:first-child::placeholder {
@@ -89,8 +86,7 @@ html:not([data-scroll='0'])
   .search-input-navbar.ant-input-group-wrapper
   .ant-input-group-addon
   .ant-input-search-button.ant-btn.ant-btn-primary,
-.header
-  .colored-navbar
+.header.colored-navbar
   .search-input-navbar.ant-input-group-wrapper
   .ant-input-group-addon
   .ant-input-search-button.ant-btn.ant-btn-primary {
@@ -102,8 +98,7 @@ html:not([data-scroll='0'])
   .header
   .ant-select-outlined:not(.ant-select-customize-input)
   .ant-select-selector,
-.header
-  .colored-navbar
+.header.colored-navbar
   .ant-select-outlined:not(.ant-select-customize-input)
   .ant-select-selector {
   border-color: #333333;
@@ -114,11 +109,10 @@ html:not([data-scroll='0'])
   .ant-select-single.ant-select-show-arrow
   .ant-select-selection-item,
 html:not([data-scroll='0']) .header .ant-select .ant-select-arrow svg,
-.header
-  .colored-navbar
+.header.colored-navbar
   .ant-select-single.ant-select-show-arrow
   .ant-select-selection-item,
-.header .colored-navbar .ant-select .ant-select-arrow svg {
+.header.colored-navbar .ant-select .ant-select-arrow svg {
   color: #333333;
   /* transition: 0.3s linear; */
 }
@@ -127,8 +121,7 @@ html:not([data-scroll='0']) .header .ant-select .ant-select-arrow svg,
 .header
   .ant-select:not(.ant-select-customize-input)
   .ant-select-selector,
-.header
-  .colored-navbar
+.header.colored-navbar
   .ant-select:not(.ant-select-customize-input)
   .ant-select-selector {
   transition: none;
@@ -138,8 +131,7 @@ html:not([data-scroll='0']) .header .ant-select .ant-select-arrow svg,
   .ant-select-single
   .ant-select-selector
   .ant-select-selection-item,
-.header
-  .colored-navbar
+.header.colored-navbar
   .ant-select-single
   .ant-select-selector
   .ant-select-selection-item {
